2008-07-03  Brian Gough  <bjg@hp2.network-theory.co.uk>

	* Makefile.am (INCLUDES): use top_srcdir instead of top_builddir

Mon Apr 23 13:26:21 2001  Brian Gough  <bjg@network-theory.co.uk>

	* Makefile.am: removed demo from Makefile

	* test.c (test): changed return type to void

Mon Feb  5 13:42:54 2001  Brian Gough  <bjg@network-theory.co.uk>

	* diff.c: moved gradient calculating function into multimin since
 	it depends on multimin functions

	* test.c (main): tidied up the tests
