@@ -1,3 +1,11 @@
+2008-09-18  Brian Gough  <bjg@network-theory.co.uk>
+
+	* diff.c test.c: temporarily enable deprecated functions for
+	testing
+
+	* gsl_diff.h: marked these functions deprecated, use gsl_deriv
+	instead.
+
 2008-07-03  Brian Gough  <bjg@hp2.network-theory.co.uk>
 
 	* Makefile.am (INCLUDES): use top_srcdir instead of top_builddir
